Fix flex issues on iOS and FireFox

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,10 @@ body.hide-interface {
 	.layout-max-width {
 		max-width:none;
 		width:100%;
+		.flex-100 {
+			display:block;
+			flex:initial;
+		}
 	}
 }
 
